rnsc/tests/snapshots/error-parser-inner_classes_attr_directive-attr_end_trailing_tokens.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that trailing tokens after .inner_classes_attr_end are detected and reported.
; Expected error: E-036 (inner_classes_attr_end trailing tokens)

.class public MyClass
.super java/lang/Object

.inner_classes_attr
.inner_classes_attr_end trailing_tokens

.class_end
----- STDERR -----
[E-036] Error: unexpected trailing tokens after inner_classes_attr definition end
   ╭─[ test_data/rns_integration/error/parser/inner_classes_attr_directive/attr_end_trailing_tokens.rns:8:25 ]
   │
 8 │ .inner_classes_attr_end trailing_tokens
   │                        │───────┬───────  
   │                        ╰───────────────── expected end of inner_classes_attr definition end here
   │                                │         
   │                                ╰───────── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-036
───╯
----- JAVAP -----
not generated
