rnsc/tests/snapshots/error-parser-inner_directive-missing_operand.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that missing operand after .inner is detected and reported.
; Expected error: E-020 (missing implicit type hint operand)

.class public MyClass
.super java/lang/Object

.inner
    .super java/lang/Object

.inner_end

.class_end
----- STDERR -----
[E-020] Error: missing class name after '.inner'
   ╭─[ test_data/rns_integration/error/parser/inner_directive/missing_operand.rns:7:1 ]
   │
 7 │ .inner
   │ ───┬──│ 
   │    ╰──── the '.inner' directive requires a inner name as operand
   │       │ 
   │       ╰─ but class name is missing
   │ 
   │ Help: Provide a inner name after the '.inner' directive, e.g.:
   │       .inner <class_name>
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-020
───╯
----- JAVAP -----
not generated
